Added new pages with css files for the cities

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -22,16 +25,16 @@
         <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
             <ul class="navbar-nav w-100 justify-content-center">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Destinations</a>
+                    <a class="nav-link" href="pages/destinations.html">Destinations</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">News</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="pages/contact.html">Contact</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
@@ -46,7 +49,8 @@
         <h1>Bali</h1>
         <span>Some text about how awesome bali is</span><br>
         <span>And here we can see how really awesome bali can be</span><br>
-        <span>What about another row with more stuff perhapzi</span>
+        <span>What about another row with more stuff perhapzi</span><br>
+        <a href="pages/bali.html" class="btn btn-dark">Visit</a>
     </div>
     <!-- Page Content -->
     <div class="container">
@@ -70,7 +74,7 @@
                         </p>
 
 
-                        <a href="#" class="btn btn-light">
+                        <a href="pages/bergen.html" class="btn btn-light">
                             Click me
                         </a>
                     </div>
@@ -94,7 +98,7 @@
                         </p>
 
 
-                        <a href="#" class="btn btn-light">
+                        <a href="pages/prague.html" class="btn btn-light">
                             Click me
                         </a>
                     </div>
@@ -118,7 +122,7 @@
                         </p>
 
 
-                        <a href="#" class="btn btn-light">
+                        <a href="pages/tokyo.html" class="btn btn-light">
                             Click me
                         </a>
                     </div>
@@ -126,7 +130,6 @@
             </div>
         </div>
     </div>
-
 
     <!-- myscript -->
     <script src="javascript/script.js"></script>
