Added new cards and effects on them.

--- a/index.html
+++ b/index.html
@@ -54,81 +54,34 @@
     </div>
     <!-- Page Content -->
     <div class="container">
-
-        <!-- Row for the card-->
-        <div class=" row">
-
-            <!-- Column for card-->
-            <div class="col-lg-4 col-md-6">
-                <div class="card" style="width:18rem;">
-                    <img class="card-img-top"
-                        src="https://images.unsplash.com/photo-1585486892324-13afb8353003?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80"
-                        alt="Card image cap">
-
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            Bergen
-                        </h5>
-                        <p class="card-text">
-                            Some text about the city here could be nice perhaps
-                        </p>
-
-
-                        <a href="pages/bergen.html" class="btn btn-light">
-                            Click me
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Another column for card -->
-            <div class="col-lg-4 col-md-6">
-                <div class="card" style="width:18rem;">
-                    <img class="card-img-top"
-                        src="https://images.unsplash.com/photo-1580852710598-96912fc48065?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=935&q=80"
-                        alt="Card image cap">
-
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            Prague
-                        </h5>
-
-                        <p class="card-text">
-                            Some text about the city here could be nice perhaps
-                        </p>
-
-
-                        <a href="pages/prague.html" class="btn btn-light">
-                            Click me
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Another column for card -->
-            <div class="col-lg-4 col-md-6">
-                <div class="card" style="width:18rem;">
-                    <img class="card-img-top"
-                        src="https://images.unsplash.com/photo-1544885935-98dd03b09034?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80"
-                        alt="Card image cap">
-
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            Tokyo
-                        </h5>
-
-                        <p class="card-text">
-                            Some text about the city here could be nice perhaps
-                        </p>
-
-
-                        <a href="pages/tokyo.html" class="btn btn-light">
-                            Click me
-                        </a>
-                    </div>
-                </div>
-            </div>
+<main class="page-content">
+    <div class="card">
+        <div class="content">
+            <h2 class="title">Norway</h2>
+            <h3 class="title">Bergen</h3>
+            <p class="copy">you guessed it, the mountains</p><button class="btn">Visit</button>
         </div>
+    </div>
+    <div class="card">
+        <div class="content">
+            <h2 class="title">Czech Republic</h2>
+            <h3 class="title">Prague</h3>
+            <p class="copy">Plan your next beach trip with these fabulous destinations</p><button class="btn">Visit</button>
+        </div>
+    </div>
+    <div class="card">
+        <div class="content">
+            <h2 class="title">Desert Destinations</h2>
+            <p class="copy">It's the desert you've always dreamed of</p><button class="btn">Visit</button>
+        </div>
+    </div>
+    <div class="card">
+        <div class="content">
+            <h2 class="title">Explore The Galaxy</h2>
+            <p class="copy">Seriously, straight up, just blast off into outer space today</p><button class="btn">Visit</button>
+        </div>
+    </div>
+</main>
     </div>
 
     <!-- myscript -->
