--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css'>
     <link rel="stylesheet" href="css/style.css">
     <title>Travel with Hundré</title>
 </head>
@@ -45,47 +47,73 @@
         </div>
     </nav>
 
-    <div class="main-information">
+    <div id="BaliDiv" class="main-information">
         <h1>Bali</h1>
         <span>Some text about how awesome bali is</span><br>
         <span>And here we can see how really awesome bali can be</span><br>
         <span>What about another row with more stuff perhapzi</span><br>
         <a href="pages/bali.html" class="btn btn-dark">Visit</a>
+        <a class="btn btn-dark" id="HideBali">Hide Bali</a>
     </div>
     <!-- Page Content -->
-    <div class="container">
-<main class="page-content">
-    <div class="card">
+<div class="wrapper">
+
+    <div class="carousel">
+      <div>
+        <div class="card card1">
         <div class="content">
             <h2 class="title">Norway</h2>
             <h3 class="title">Bergen</h3>
             <p class="copy">you guessed it, the mountains</p><button class="btn">Visit</button>
         </div>
     </div>
-    <div class="card">
+      </div>    
+      <div>
+      <div class="card card2">
         <div class="content">
             <h2 class="title">Czech Republic</h2>
             <h3 class="title">Prague</h3>
             <p class="copy">Plan your next beach trip with these fabulous destinations</p><button class="btn">Visit</button>
         </div>
     </div>
-    <div class="card">
+      </div>
+      <div>
+    <div class="card card3">
         <div class="content">
             <h2 class="title">Desert Destinations</h2>
             <p class="copy">It's the desert you've always dreamed of</p><button class="btn">Visit</button>
         </div>
     </div>
-    <div class="card">
+      </div>
+      <div>
+ <div class="card card4">
         <div class="content">
             <h2 class="title">Explore The Galaxy</h2>
             <p class="copy">Seriously, straight up, just blast off into outer space today</p><button class="btn">Visit</button>
         </div>
     </div>
-</main>
+      </div>
+      <div>
+        <div class="card card5">
+        <div class="content">
+            <h2 class="title">Explore The Galaxy</h2>
+            <p class="copy">Seriously, straight up, just blast off into outer space today</p><button class="btn">Visit</button>
+        </div>
+    </div>
+      </div>
+      <div>
+        <div class="card card6">
+        <div class="content">
+            <h2 class="title">Explore The Galaxy</h2>
+            <p class="copy">Seriously, straight up, just blast off into outer space today</p><button class="btn">Visit</button>
+        </div>
+    </div>
+        </div>
+      </div>    
     </div>
 
-    <!-- myscript -->
-    <script src="javascript/script.js"></script>
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -97,6 +125,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+        <!-- myscript -->
+       <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js'></script>
+    <script src="javascript/script.js"></script>
 </body>
 
 </html>
