Fixed mobile media querys

--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
     </nav>
 
     <div id="BaliDiv" class="main-information">
-        <h1>Bali</h1>
+        <h1>Hundré Travels</h1>
         <span>Some text about how awesome bali is</span><br>
         <span>And here we can see how really awesome bali can be</span><br>
         <span>What about another row with more stuff perhapzi</span><br>
-        <a href="pages/bali.html" class="btn btn-dark">Visit</a>
-        <a class="btn btn-dark" id="HideBali">Hide Bali</a>
+        <a href="pages/bali.html" class="btn btn-dark">View destinations</a>
     </div>
     <!-- Page Content -->
 <div class="wrapper">
@@ -61,54 +60,64 @@
     <div class="carousel">
       <div>
         <div class="card card1">
-        <div class="content">
-            <h2 class="title">Norway</h2>
+            <div class="cardTitle">
+                <h2 class="title">Norway</h2>
             <h3 class="title">Bergen</h3>
-            <p class="copy">you guessed it, the mountains</p><button class="btn">Visit</button>
+                </div>
+        <div class="content">
+            <p class="copy">you guessed it, the mountains</p>
+            <button class="btn">Visit</button>
         </div>
     </div>
       </div>    
       <div>
       <div class="card card2">
-        <div class="content">
-            <h2 class="title">Czech Republic</h2>
+          <div class="cardTitle">
+             <h2 class="title">Czech Republic</h2>
             <h3 class="title">Prague</h3>
-            <p class="copy">Plan your next beach trip with these fabulous destinations</p><button class="btn">Visit</button>
+          </div>
+        <div class="content">     
+             <p class="copy">you guessed it, the mountains</p>
+            <button class="btn">Visit</button>
         </div>
     </div>
       </div>
       <div>
     <div class="card card3">
+        <div class="cardTitle">
+            <h2 class="title">Indonesia</h2>
+            <h3 class="title">Bali</h3>
+        </div>
         <div class="content">
-            <h2 class="title">Desert Destinations</h2>
-            <p class="copy">It's the desert you've always dreamed of</p><button class="btn">Visit</button>
+             <p class="copy">you guessed it, the mountains</p>
+            <button class="btn">Visit</button>
         </div>
     </div>
       </div>
       <div>
  <div class="card card4">
+     <div class="cardTitle">
+       <h2 class="title">Japan</h2>
+            <h3 class="title">Tokyo</h3>
+     </div>
         <div class="content">
-            <h2 class="title">Explore The Galaxy</h2>
-            <p class="copy">Seriously, straight up, just blast off into outer space today</p><button class="btn">Visit</button>
+           <p class="copy">you guessed it, the mountains</p>
+            <button class="btn">Visit</button>
         </div>
     </div>
       </div>
       <div>
         <div class="card card5">
+            <div class="cardTitle">
+            <h2 class="title">England</h2>
+            <h3 class="title">London</h3>
+            </div>
         <div class="content">
-            <h2 class="title">Explore The Galaxy</h2>
-            <p class="copy">Seriously, straight up, just blast off into outer space today</p><button class="btn">Visit</button>
+            <p class="copy">you guessed it, the mountains</p>
+            <button class="btn">Visit</button>
         </div>
     </div>
       </div>
-      <div>
-        <div class="card card6">
-        <div class="content">
-            <h2 class="title">Explore The Galaxy</h2>
-            <p class="copy">Seriously, straight up, just blast off into outer space today</p><button class="btn">Visit</button>
-        </div>
-    </div>
-        </div>
       </div>    
     </div>
 
