--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="pages/destinations.html">Destinations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">News</a>
+                    <a class="nav-link" href="pages/news.html">News</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="pages/contact.html">Contact</a>
@@ -55,70 +55,70 @@
         <a href="pages/bali.html" class="btn btn-dark">View destinations</a>
     </div>
     <!-- Page Content -->
-<div class="wrapper">
+    <div class="wrapper">
 
-    <div class="carousel">
-      <div>
-        <div class="card card1">
-            <div class="cardTitle">
-                <h2 class="title">Norway</h2>
-            <h3 class="title">Bergen</h3>
+        <div class="carousel">
+            <div>
+                <div class="card card1">
+                    <div class="cardTitle">
+                        <h2 class="title">Norway</h2>
+                        <h3 class="title">Bergen</h3>
+                    </div>
+                    <div class="content">
+                        <p class="copy">you guessed it, the mountains</p>
+                        <button class="btn">Visit</button>
+                    </div>
                 </div>
-        <div class="content">
-            <p class="copy">you guessed it, the mountains</p>
-            <button class="btn">Visit</button>
-        </div>
-    </div>
-      </div>    
-      <div>
-      <div class="card card2">
-          <div class="cardTitle">
-             <h2 class="title">Czech Republic</h2>
-            <h3 class="title">Prague</h3>
-          </div>
-        <div class="content">     
-             <p class="copy">you guessed it, the mountains</p>
-            <button class="btn">Visit</button>
-        </div>
-    </div>
-      </div>
-      <div>
-    <div class="card card3">
-        <div class="cardTitle">
-            <h2 class="title">Indonesia</h2>
-            <h3 class="title">Bali</h3>
-        </div>
-        <div class="content">
-             <p class="copy">you guessed it, the mountains</p>
-            <button class="btn">Visit</button>
-        </div>
-    </div>
-      </div>
-      <div>
- <div class="card card4">
-     <div class="cardTitle">
-       <h2 class="title">Japan</h2>
-            <h3 class="title">Tokyo</h3>
-     </div>
-        <div class="content">
-           <p class="copy">you guessed it, the mountains</p>
-            <button class="btn">Visit</button>
-        </div>
-    </div>
-      </div>
-      <div>
-        <div class="card card5">
-            <div class="cardTitle">
-            <h2 class="title">England</h2>
-            <h3 class="title">London</h3>
             </div>
-        <div class="content">
-            <p class="copy">you guessed it, the mountains</p>
-            <button class="btn">Visit</button>
+            <div>
+                <div class="card card2">
+                    <div class="cardTitle">
+                        <h2 class="title">Czech Republic</h2>
+                        <h3 class="title">Prague</h3>
+                    </div>
+                    <div class="content">
+                        <p class="copy">you guessed it, the mountains</p>
+                        <button class="btn">Visit</button>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="card card3">
+                    <div class="cardTitle">
+                        <h2 class="title">Indonesia</h2>
+                        <h3 class="title">Bali</h3>
+                    </div>
+                    <div class="content">
+                        <p class="copy">you guessed it, the mountains</p>
+                        <button class="btn">Visit</button>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="card card4">
+                    <div class="cardTitle">
+                        <h2 class="title">Japan</h2>
+                        <h3 class="title">Tokyo</h3>
+                    </div>
+                    <div class="content">
+                        <p class="copy">you guessed it, the mountains</p>
+                        <button class="btn">Visit</button>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="card card5">
+                    <div class="cardTitle">
+                        <h2 class="title">England</h2>
+                        <h3 class="title">London</h3>
+                    </div>
+                    <div class="content">
+                        <p class="copy">you guessed it, the mountains</p>
+                        <button class="btn">Visit</button>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-      </div>
-      </div>    
     </div>
 
 
@@ -134,9 +134,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-        <!-- myscript -->
-       <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js'></script>
+    <!-- myscript -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js'></script>
     <script src="javascript/script.js"></script>
 </body>
 
