added some design to news page bali-title

--- a/pages/news.html
+++ b/pages/news.html
@@ -59,6 +59,7 @@
 
         <img class="bali-img"
             src="https://images.unsplash.com/photo-1559305289-4c31700ba9cb?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2166&q=80">
+        <h3 class="margin" id="newDestination">NEW DESTINATION</h3>
         <h3 class="margin" id="bali">Bali, Indonesia</h3>
         <div class="Bali-info">
             <p>Bali is an Indonesian island known for its forested volcanic mountains, iconic rice paddies, beaches and
@@ -86,7 +87,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua.</p>
             </div>
-            <a id="contactBtn" href="bali.html" type="button" class="btn btn-secondary btn-sm">
+            <a id="contactBtn" href="contact.html" type="button" class="btn btn-secondary btn-sm">
                 <span class="glyphicon glyphicon-search"></span> Contact Us
             </a>
         </div>
