--- a/pages/news.html
+++ b/pages/news.html
@@ -22,16 +22,16 @@
         <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
             <ul class="navbar-nav w-100 justify-content-center">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/destinations.html">Destinations</a>
+                    <a class="nav-link" href="destinations.html">Destinations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/news.html">News</a>
+                    <a class="nav-link" href="news.html">News</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/contact.html">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
@@ -66,7 +66,7 @@
                 coral reefs. The island is home to religious sites such as cliffside Uluwatu Temple. To the south, the
                 beachside city of Kuta has lively bars, while Seminyak, Sanur and Nusa Dua are popular resort
                 towns.<q>-google</q> </p>
-            <a href="bali.html" type="button" class="btn btn-secondary btn-sm">
+            <a href="bali.html" id="visitBtn" type="button" class="btn btn-secondary btn-sm">
                 <span class="glyphicon glyphicon-search"></span> Visit
             </a>
         </div>
@@ -75,10 +75,15 @@
 
     <!-- Third Container (Grid) -->
     <div class="container-fluid bg-3 text-center">
-        <h3 class="margin">New Headquarter</h3><br>
+        <h3 class="margin" style="margin-bottom: 0px;">New Headquarter</h3><br>
+        <h4 class="margin" id="Gothenburg">Gothenburg</h4><br>
         <div class="row">
             <div class="col-sm-12">
-                <p>We are happy to announce that we've recently moved our Headquarter to Gothenburg City Central</p>
+                <p>We are happy to announce that we've recently moved our
+                    Headquarter to Gothenburg City Central</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur, nulla neque nesciunt rem
+                    expedita soluta a. Reprehenderit quo vitae illo expedita, omnis quasi velit itaque consequuntur
+                    asperiores excepturi facilis odio.</p>
                 <img id="HQ-Picture"
                     src="https://images.unsplash.com/photo-1546620049-440f8f1fe144?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1868&q=80"
                     class="img-responsive margin" alt="Image">
